--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^9.0.2",
     "express": "^4.16.2",
     "mongoose": "^5.12.10",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
